python/testData/inspections/addClassToModuleInFromImport/addClassToModuleInFromImport.py
from mod import <error descr="Cannot find reference 'Clzz' in 'mod.py'"><caret>Clzz</error>


clzz = Clzz()
